force-app/main/default/objects/Candidate_Test__c/fields/ABS__c.field-meta.xml
<CustomField>
    <fullName>ABS__c</fullName>
    <formula>ABS(  Number_of_References__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>