force-app/main/default/objects/Candidate_Test__c/fields/Begins__c.field-meta.xml
<CustomField>
    <fullName>Begins__c</fullName>
    <formula>IF(BEGINS ( Name__c , &quot;ICU&quot;), &quot;Medical&quot;, &quot;Technical&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Begins</label>
    <type>Text</type>
</CustomField>