force-app/main/default/objects/Candidate_Test__c/fields/BLANKVALUE__c.field-meta.xml
<CustomField>
    <fullName>BLANKVALUE__c</fullName>
    <formula>BLANKVALUE(Name__c,   test__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BLANKVALUE</label>
    <type>Text</type>
</CustomField>