force-app/main/default/objects/Candidate_Test__c/fields/Candidate_Region1__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Region1__c</fullName>
    <label>Candidate Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Region C</fullName>
            </value>
            <value>
                <fullName>Region D</fullName>
            </value>
            <value>
                <fullName>Region E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>