force-app/main/default/objects/Candidate_Test__c/fields/Candidate_Test__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Test</label>
    <referenceTo>Candidate_Test__c</referenceTo>
    <relationshipLabel>Candidate Test</relationshipLabel>
    <relationshipName>Candidate_Test</relationshipName>
    <type>Lookup</type>
</CustomField>