force-app/main/default/objects/Candidate_Test__c/fields/Exp__c.field-meta.xml
<CustomField>
    <fullName>Exp__c</fullName>
    <formula>EXP(  No_of_day__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>