force-app/main/default/objects/Candidate_Test__c/fields/Find__c.field-meta.xml
<CustomField>
    <fullName>Find__c</fullName>
    <formula>FIND(&quot;@&quot;,  Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Find</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>