force-app/main/default/objects/Candidate_Test__c/fields/FLOOR__c.field-meta.xml
<CustomField>
    <fullName>FLOOR__c</fullName>
    <formula>FLOOR( Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLOOR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>