force-app/main/default/objects/Candidate_Test__c/fields/LN__c.field-meta.xml
<CustomField>
    <fullName>LN__c</fullName>
    <formula>LN( Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>