force-app/main/default/objects/Candidate_Test__c/fields/No_of_day__c.field-meta.xml
<CustomField>
    <fullName>No_of_day__c</fullName>
    <formula>DAY( Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>