force-app/main/default/objects/Candidate_Test__c/fields/NOT__c.field-meta.xml
<CustomField>
    <fullName>NOT__c</fullName>
    <formula>OR( No_of_day__c   &gt;10,   No_of_day__c &gt;10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOT</label>
    <type>Checkbox</type>
</CustomField>