force-app/main/default/objects/Candidate_Test__c/fields/Not_Approved__c.field-meta.xml
<CustomField>
    <fullName>Not_Approved__c</fullName>
    <label>Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Approved</fullName>
                <default>true</default>
                <label>Not Approved</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>