force-app/main/default/objects/Candidate_Test__c/fields/Number_of_References__c.field-meta.xml
<CustomField>
    <fullName>Number_of_References__c</fullName>
    <label>Number of References</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>