force-app/main/default/objects/Candidate_Test__c/validationRules/about_enquiry.validationRule-meta.xml
<ValidationRule>
    <fullName>about_enquiry</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(  NOT__c ==true,  ISBLANK( Description__c ) ), true,false)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Please select the Not function then only we can enter</errorMessage>
</ValidationRule>