force-app/main/default/objects/Candidate_Test__c/validationRules/Diiferent_object.validationRule-meta.xml
<ValidationRule>
    <fullName>Diiferent_object</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Name== VLOOKUP( $ObjectType.Employee__c.Fields.Name ,  $ObjectType.Employee__c.Fields.Name , Name), true, false)</errorConditionFormula>
    <errorMessage>Different Object</errorMessage>
</ValidationRule>