force-app/main/default/objects/Candidate_Test__c/validationRules/number_of_reference.validationRule-meta.xml
<ValidationRule>
    <fullName>number_of_reference</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_References__c &gt;4</errorConditionFormula>
    <errorDisplayField>Number_of_References__c</errorDisplayField>
    <errorMessage>Please provide the valid number</errorMessage>
</ValidationRule>