force-app/main/default/objects/Candidate_Test__c/validationRules/same_name_two_object_exist_or_not.validationRule-meta.xml
<ValidationRule>
    <fullName>same_name_two_object_exist_or_not</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Name==VLOOKUP(  $ObjectType.student__c.Fields.Name  ,    $ObjectType.student__c.Fields.Name ,  Name) , true, false)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>please enter defferent name</errorMessage>
</ValidationRule>