force-app/main/default/objects/Candidate_Test__c/validationRules/Vlookup_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Vlookup_validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF( Name ==VLOOKUP( $ObjectType.Candidate_Test__c.Fields.Name ,  $ObjectType.Candidate_Test__c.Fields.Name ,    Name ), true, false)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Same Name already exist.</errorMessage>
</ValidationRule>